@@ -26,7 +26,7 @@
   <widget>
     <class>GtkTable</class>
     <name>prefs_widget</name>
-    <rows>4</rows>
+    <rows>3</rows>
     <columns>2</columns>
     <homogeneous>False</homogeneous>
     <row_spacing>5</row_spacing>
@@ -250,34 +250,6 @@ Horizontal Gradient
 	  </child>
 	</widget>
       </widget>
-    </widget>
-
-    <widget>
-      <class>GtkCheckButton</class>
-      <name>auto_apply</name>
-      <can_focus>True</can_focus>
-      <signal>
-	<name>toggled</name>
-	<handler>auto_apply_toggled_cb</handler>
-	<last_modification_time>Thu, 21 Dec 2000 19:52:25 GMT</last_modification_time>
-      </signal>
-      <label>Apply changes automatically</label>
-      <active>False</active>
-      <draw_indicator>True</draw_indicator>
-      <child>
-	<left_attach>0</left_attach>
-	<right_attach>2</right_attach>
-	<top_attach>3</top_attach>
-	<bottom_attach>4</bottom_attach>
-	<xpad>0</xpad>
-	<ypad>0</ypad>
-	<xexpand>False</xexpand>
-	<yexpand>False</yexpand>
-	<xshrink>False</xshrink>
-	<yshrink>False</yshrink>
-	<xfill>True</xfill>
-	<yfill>False</yfill>
-      </child>
     </widget>
 
     <widget>
@@ -529,7 +501,7 @@ Stretched (change aspect ratio)
 	  <widget>
 	    <class>GtkLabel</class>
 	    <name>label9</name>
-	    <label>More Solid</label>
+	    <label>More Opaque</label>
 	    <justify>GTK_JUSTIFY_CENTER</justify>
 	    <wrap>False</wrap>
 	    <xalign>0.5</xalign>
